fix: modify the toolbar add button border to outline to avoid layout shift

--- a/src/assets/sass/components/ae-toolbar/skin.scss
+++ b/src/assets/sass/components/ae-toolbar/skin.scss
@@ -23,7 +23,7 @@
 
 .ae-toolbar-add {
     background-color: $toolbar-add-bg-color;
-    border-color: $toolbar-add-border-color;
+    outline-color: $toolbar-add-border-color;
     border-radius: $toolbar-add-border-radius;
     color: $toolbar-add-font-color;
 
