--- a/src/assets/sass/skin/atlas/variables/structure.scss
+++ b/src/assets/sass/skin/atlas/variables/structure.scss
@@ -53,7 +53,7 @@ $dropdown-listbox-item-max-height: 44px;
 $dropdown-listbox-item-padding: 8px 12px;
 
 /** TOOLBAR **/
-$toolbar-add-border-width: 2px;
+$toolbar-add-border-width: 1px;
 $toolbar-add-height: 44px;
 $toolbar-add-width: 44px;
 
